<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/depression_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/depression_level"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ProgressBar
        android:id="@+id/depression_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:progress="40"
        android:max="100"
        android:layout_marginTop="4dp"
        android:progressTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/depression_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <LinearLayout
        android:id="@+id/status_factors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/depression_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/sleep_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/hunger_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hunger"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/boredom_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanity"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/cleanliness_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleanliness" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/status_factors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/message_output"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:navGraph="@navigation/mobile_navigation" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
